[metadata]
name = grace
version = attr: grace.__version__
author = You
author_email = your@email.address
url = https://godatadriven.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml
description = grace package description
long_description = file: README.md
long_description_content_type = text/markdown
keywords = grace, setuptools
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pandas == 1.4.1
    PyYAML >= 6.0
    typer

[options.entry_points]
console_scripts = 
    my-grace-utility = grace.grace_module:main


[options.package_data]
grace = data/schema.json, *.txt
* = README.md